--- a/app/public/index.html
+++ b/app/public/index.html
@@ -26,8 +26,8 @@
     />
     <meta property="og:image" content="%PUBLIC_URL%/logo.jpg" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:creator" content="@" />
-    <meta name="twitter:site" content="@" />
+    <meta name="twitter:creator" content="@syllabusapp" />
+    <meta name="twitter:site" content="@syllabusapp" />
     <meta
       name="twitter:title"
       content="The Best LMS For Higher Education :: Syllabus"
@@ -57,9 +57,31 @@
         "url": "https://syllabusapp.com/"
       }
     </script>
-    <link rel="shortcut icon" href="%PUBLIC_URL%/icons/icon-48x48.png" />
-    <meta name="theme-color" content="#2C9360" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="%PUBLIC_URL%/icons/icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="%PUBLIC_URL%/icons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="%PUBLIC_URL%/icons/favicon-16x16.png"
+    />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      rel="mask-icon"
+      href="%PUBLIC_URL%/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <meta name="msapplication-TileColor" content="#9f00a7" />
+    <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
